Prepare for deployment to Vercel and Heroku

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb+srv://abhinavborad7:Macjacker%40123@cover-letter-generator.ajtxk.mongodb.net/?retryWrites=true&w=majority&appName=cover-letter-generator
-MONGODB_DB=cover-letter-generator 
+MONGODB_DB=cover-letter-generator
+PORT=5000
+DEBUG=False
+ALLOWED_ORIGINS=https://my-cl-generator.vercel.app,https://my-cl-generator-macjacker.vercel.app 
