--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@
 # Web Framework
 flask==2.0.1
 flask-cors==3.0.10
+werkzeug==2.0.3  # Pinning Werkzeug version to be compatible with Flask 2.0.1
 
 # ML & NLP Libraries
 torch>=1.10.0
