--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,10 @@
 services:
   - type: web
     name: my-cl-generator-api
-    env: python3
+    env: python
+    runtime: python3
     buildCommand: pip install -r backend/requirements.txt && python -m spacy download en_core_web_sm
-    startCommand: cd backend && python app.py
+    startCommand: cd backend && gunicorn --chdir backend app:app
     envVars:
       - key: PORT
         value: 5000
