--- a/render.yaml
+++ b/render.yaml
@@ -4,10 +4,10 @@ services:
     env: python
     runtime: python3
     buildCommand: pip install -r backend/requirements.txt && python -m spacy download en_core_web_sm
-    startCommand: cd backend && gunicorn --chdir backend app:app
+    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: PORT
-        value: 5000
+        value: 10000
       - key: DEBUG
         value: false
       - key: ALLOWED_ORIGINS
