--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     runtime: python3
     buildCommand: pip install -r backend/requirements.txt && python -m spacy download en_core_web_sm
-    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:$PORT
+    startCommand: cd backend && gunicorn app:app --bind 0.0.0.0:5000
     envVars:
       - key: PORT
         value: 5000
